<resources>
    <string name="app_name">ConstraintLayoutExercise</string>
    <string name="button1">Button</string>
    <string name="a_star">a star</string>
    <string name="str_country_name">germany</string>
    <string name="str_location_text_view">location</string>
    <string name="str_first_edit_text_hint">your location</string>
    <string name="str_text_view_town">town</string>
    <string name="str_edit_text_town">your town</string>
    <string name="str_button_cancel">Cancel</string>
    <string name="str_button_confirm">confirm</string>
    <string name="str_image_view_description">description</string>
    <string name="str_image_view_two_description">description2</string>
    <string name="str_about">Germany is a Western European country with a landscape of forests, rivers, mountain ranges and North Sea beaches. It has over 2 millennia of history. Berlin, its capital, is home to art and nightlife scenes, the Brandenburg Gate and many sites relating to WWII. Munich is known for its Oktoberfest and beer halls, including the 16th-century Hofbräuhaus. Frankfurt, with its skyscrapers, houses the European Central Bank.</string>
    <string name="germany">Germany</string>
</resources>